cleanup comments